# project-monitor

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CALL_ARCHITECTURE.md  CALL_PARTICIPANTS_COMPLETE.md  CALL_PARTICIPANTS_IMPLEMENTATION_STATUS.md  CALL_PARTICIPANTS_SYSTEM_SUMMARY.md  FUNCTIONAL_DIAGRAM.md  IMPLEMENTATION_COMPLETE.md  INPUT_DATA_TABLE.md  MEDIASOUP_MIGRATION_COMPLETE.md  MIGRATION_VERIFICATION_CHECKLIST.md  NIID_AUTH_FIX.md  PLATFORMS_AND_TECHNOLOGIES.md  PLATFORM_CONCEPT.md  PRESENTATION_SPEECH.md  PRODUCTION_ENV_SETUP.md  QUICK_MEDIASOUP_SETUP.md  README.md  SECTION_1_5_DRAFT.md  SSE_FIX_OPTIONS.md  STRUCTURE_DIAGRAM.md  TELEGRAM_INTEGRATION_GUIDE.md  TELEGRAM_SETUP.md  TEST-PROJECT.md  TEST_DATA.md  WHITEBOARD_POSITIONING_ANALYSIS.md  analyze_pz.py  api.md  backend-logs.txt  backend_logs.txt  backend_logs_final.txt  cleanup_sso_users.sql  docker-compose.prod.yml  docker-compose.yml  fix-niid-auth.ps1  fix-niid-auth.sh  nginx-git-location.conf  reset_db.sql  set-env.sh  setup_niid.py  (+8 more)
backend/: Dockerfile  migrate_db.py  requirements.txt
front/: .env.production  Dockerfile  README.md  build_log.txt  build_log_2.txt  index.html  nginx.conf  nicorp-nui-0.1.7.tgz  nicorp-nui-0.10.1.tgz  package.json  tailwind.config.ts  tsc_errors.txt  tsconfig.json  vite.config.ts
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
livekit/: livekit.yaml
newbackend/: Dockerfile  README.md  build_output.txt  pom.xml
newfrontend/: Dockerfile  index.html  package.json  tailwind.config.js
powerpoint-mcp/: pyproject.toml  server.py
(+725 files in other folders)
