[project]
name = "powerpoint-mcp-server"
version = "0.1.0"
description = "MCP server for creating and editing PowerPoint presentations"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-pptx>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
powerpoint_mcp_server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
